--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
       <div class="carousel-item">
         <img src="static/images/second_harvest_1.jpeg" width=600px height=700px class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h1>Second Harvest Progranm</h5>
+          <h1>Second Harvest Program</h5>
           <!-- <p>Some representative placeholder content for the second slide.</p> -->
         </div>
       </div>
